--- a/myblog/templates/list.html
+++ b/myblog/templates/list.html
@@ -1,10 +1,13 @@
-{% extends "base.html" %}{% block content %}
+{% extends "base.html" %}
+{% block content %}
+
+    <a href="/post/new/">New Post</a>
     <h1>Recent Posts</h1>
     {% for post in posts %}
         <div class="post">
         <h2><a href="{% url 'blog_detail' post.pk %}">{{ post }}</a></h2>
             <p class="byline">
-            Posted by {{ post.author.name }} &mdash; {{ post.published_date }}
+            Posted by {{ post.author.first_name }} &mdash; {{ post.published_date }}
             </p>
         <ul class="categories">
         {% for category in post.categories.all %}
