--- a/myblog/templates/detail.html
+++ b/myblog/templates/detail.html
@@ -2,9 +2,10 @@
 
 {% block content %}
     <a class="backlink" href="/">Home</a>
+    <a href="/post/new/">New Post</a>
     <h1>{{ post }}</h1>
         <p class="byline">
-        Posted by {{ post.author.name }} &mdash; {{ post.published_date }}
+        Posted by {{ post.author.first_name }} {{ post.author.last_name }} &mdash; {{ post.published_date }}
         </p>
     <div class="post-body">
         {{ post.text }}
